--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,10 @@ name="day06_a"
 path="src/bin/06/a.rs"
 
 [[bin]]
+name="day06_b"
+path="src/bin/06/b.rs"
+
+[[bin]]
 name="day07_a"
 path="src/bin/07/a.rs"
 
