--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,10 @@ name="day05_b"
 path="src/bin/05/b.rs"
 
 [[bin]]
+name="day05_b_multi"
+path="src/bin/05/b_multi.rs"
+
+[[bin]]
 name="day06_a"
 path="src/bin/06/a.rs"
 
