wow I COMPLETELY misunderstood this one.  my solution looks like it was written by a schizophrenic.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,3 +86,11 @@ path="src/bin/09/a.rs"
 name="day09_b"
 path="src/bin/09/b.rs"
 
+[[bin]]
+name="day10_a"
+path="src/bin/10/a.rs"
+
+[[bin]]
+name="day10_b"
+path="src/bin/10/b.rs"
+
